ReactJs-reduxClass-counter

--- a/src/App.css
+++ b/src/App.css
@@ -22,27 +22,28 @@ body {
 .underline {
   width: 6rem;
   height: 0.25rem;
-  background: var(--clr-primary-5);
+  background: #000f;
   margin-left: auto;
   margin-right: auto;
 }
 
 .btn-container {
-  margin-bottom: 4rem;
+  margin: 4rem 4rem;
   display: flex;
   justify-content: center;
 }
 
 .btn {
-  color: var(--clr-primary-7);
+  color: #000f;
   font-size: 1.25rem;
   background: transparent;
   border-color: transparent;
   margin: 0 0.5rem;
-  transition: var(--transition);
+  transition: ease;
   cursor: pointer;
 }
 
 .btn:hover {
-  color: var(--clr-primary-5);
+  background: #000;
+  color: #fff;
 }
